Add reset game functionality

--- a/src/futoshiki/style.scss
+++ b/src/futoshiki/style.scss
@@ -31,6 +31,10 @@
 
         &.hasValue {
             justify-content: center;
+
+            &.provided {
+                font-weight: bold;
+            }
         }
 
         &.highlight {
