Implement backtracking for solver algorithm

--- a/src/futoshiki/style.scss
+++ b/src/futoshiki/style.scss
@@ -35,6 +35,10 @@
             &.provided {
                 font-weight: bold;
             }
+
+            &.guess {
+                color: blue;
+            }
         }
 
         &.highlight {
